fix: overflow and layout

--- a/src/App.global.css
+++ b/src/App.global.css
@@ -17,24 +17,15 @@
 
 .panel {
   display: grid;
-  grid-template-rows: var(--path-line-height) calc(
-      100% - var(--path-line-height)
-    );
+  grid-template-rows: max-content 1fr;
 }
 
 .explorer-content {
   height: calc(100% - 24px);
 }
 
-.overflow-x-overlay {
-  overflow-x: overlay;
-}
-
-.panels {
-  display: grid;
-  grid-template-rows: calc(100% - var(--status-bar-height)) var(
-      --status-bar-height
-    );
+.overflow-y-overlay {
+  overflow-y: overlay;
 }
 
 .reflex-splitter {
